--- a/README
+++ b/README
@@ -4,4 +4,4 @@ aint the markup language
 v1.0 - by egdod
 pronounced rat-mull
 
-g++ -c ./ratml.c -o ./ratml.o;ar rcs ./ratml.a ./ratml.o
+gcc -c ./ratml.c -o ./ratml.o;ar rcs ./ratml.a ./ratml.o
