--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 +-.  /-\  -+-  +-+  |
 |-\  |-|   |   |||  |__
 aint the markup language
-v1.0 - by egdod
+v1.0.1 - by egdod
 pronounced rat-mull
+changelog 1.0.1
+add reference types, 1.1 will release when lists are implemented
 
 gcc -c ./ratml.c -o ./ratml.o;ar rcs ./ratml.a ./ratml.o
